src/test/error/form.lns
{
   fn func( test1:form ) {
      test1( nil );
   }

   func( fn (val:int) { // error
      print( val + 1 );
   } );
   func( fn (val:int!) { // error
      print( unwrap val + 1 );
   } );
   func( fn (val:int!, val2:int) { // error
      print( unwrap val + 1 );
   } );
   func( fn (...) {
      print( ... );
   } );
}
{
   let mut func:form;
   func = fn ( val:int! ) { // error
   };
   func = fn ( val:stem! ) {
   };
   func = fn ( val:stem!, ... ) {
   };
   func = fn ( ... ) {
   };
   func = fn ( val:stem!, val2:int ) { // error
   };
}
{
   form Test();

   Test(); // error
   (Test)(); // error
}